Update create event

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "fakey",
   "version": "0.0.1",
-  "dependencies": {
-    "requirejs": "2.1.9"
+  "devDependencies": {
+  	"requirejs": "2.1.9"
   }
 }
