--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "url": "https://github.com/jaridmargolin/fakey"
   },
   "scripts": {
-    "test": "make test"
+    "test": "grunt test"
   },
   "devDependencies": {
     "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-clean": "~0.5.0",
-    "mocha-phantomjs": "~3.1.6",
+    "grunt-saucelabs": "~4.1.2",
     "amdclean": "~0.3.0",
     "grunt": "~0.4.1",
     "mocha": "~1.9.0",
