Add IE >= 7 support

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fakey",
-  "version": "0.0.5",
-  "description": "Fake key events for testing purposes.",
+  "version": "0.0.6",
+  "description": "Fake user key events on input elements.",
   "author": "Jarid Margolin <jaridmargolin@gmail.com>",
   "repository": {
     "type": "git",
@@ -17,11 +17,12 @@
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-saucelabs": "~4.1.2",
+    "mocha-phantomjs": "~3.1.6",
+    "proclaim": "~2.0.0",
     "amdclean": "~0.3.0",
     "grunt": "~0.4.1",
     "mocha": "~1.9.0",
-    "sinon": "~1.7.3",
-    "chai": "~1.6.0"
+    "sinon": "~1.7.3"
   },
   "license": "MIT"
 }
